testsuite/tests/structs/invalid_env_md/bad_type.lkt
import common

@metadata struct Metadata {
    @use_in_equality fld: AnalysisUnit[FooNode]
}
